--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -9,6 +9,8 @@
 	overflow-y: scroll;
 	position: relative;
 	background-color: #fff;
+	-webkit-user-select: none;
+	cursor: default;
 }
 
 #commands {
@@ -40,6 +42,7 @@
 	overflow-y: auto;
 	overflow-x: hidden;
 	padding: 10px;
+	cursor: text;
 }
 
 #newimage {
@@ -176,14 +179,14 @@
 	display: block;
 }
 .send2 h2 {
-	font-size: 14px;
+	font-size: 13px;
 	font-weight: lighter;
 	float: left;
 	width: 80px;
 	text-align: right;
 	margin: 0;
 }
-.send2 > div {
+.send2 .finder-widget-container {
 	margin-left: 90px;
 }
 
@@ -216,6 +219,8 @@
 	padding: 2px 2px;
 	font-size: 11px;
 	border-radius: 2px;
+	max-width: 100px;
+	white-space: nowrap;  overflow: hidden;  text-overflow: ellipsis;
 }
 
 .send2 .del {
@@ -290,7 +295,7 @@
 .finder input {
 	outline: none;
 	width: 45px;
-	transition: width .2s ease;
+	transition: width .2s .5s ease;
 	border: 1px solid #ddd;
 	border-radius: 2px;
 	padding: 2px 3px;
@@ -299,25 +304,42 @@
 .finder input:focus {
 	width: 130px;
 }
-.finder ul {
+.finder .finder-title {
+	background-color: #ccc;
+	padding: 5px;
+	font-weight: 100;
+	font-size: 10px;
+	border-bottom: 2px solid #aaa;
+}
+.finder .finder-title .close {
+	float: right;
+	cursor: pointer;
+}
+.finder .finder-title .close:hover {
+	color: #000;
+}
+.finder .finder-list {
 	position: absolute;
-	right: 0;
+	left: 0;
 	bottom: 20px;
+	background-color: #fff;
+	border: 1px solid #ccc;
+	display: none;
+	width: 136px;
+	box-shadow: 2px 2px 3px 1px #aaa;
+}
+.finder .finder-list ul {
 	padding: 0;
 	list-style: none;
-	background-color: #fff;
-	width: 136px;
-	border: 1px solid #ccc;
-	max-height: 175px;
+	max-height: 150px;
 	overflow-y: auto;
-	display: none;
 }
 
-.finder ul img {
+.finder .finder-list ul img {
 	height: 25px;
 	float: left;
-	margin: 3px;
-	border: 1px solid #ddd;
+	margin: 4px;
+	/* border: 1px solid #ddd; */
 }
 
 .finder li {
@@ -334,9 +356,7 @@
 	background-color: #f30;
 	color: #fff;
 }
-.finder li:hove {
-	background-color: #ccc;
-}
+
 .finder li.no-result {
 	padding: 5px;
 	height: 20px;
@@ -346,15 +366,16 @@
 
 .finder span {
 	display: block;
-	float: left;
-	width: 92px;
+	float: right;
+	width: 90px;
 	font-size: 11px;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
+	padding-top: 2px;
 }
 .finder span.nickname {
-	font-weight: bold;
+	/* font-weight: bold; */
 }
 #send2user .finder span.nickname:before {
 	content: "@";
