--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -167,9 +167,42 @@
 	right: 0;
 }
 
+#destinations:before {
+	margin-left: 90px;
+	margin-bottom: 5px;
+	display: block;
+	height: 0;
+	opacity: 0;
+	overflow: hidden;
+	transition: opacity .5s linear;
+	background-color: #f30;
+	padding: 2px;
+	border-radius: 3px;
+	color: #fff;
+}
+
+#editor.is-public #send2user {
+	height: 0;
+	overflow: hidden;
+}
+#editor.is-private #send2theme {
+	height: 0;
+	overflow: hidden;
+}
+#editor.is-public #destinations:before {
+	opacity: 1;
+	height: auto;
+	content: "Mensaje público en los siguientes temas:";
+}
+#editor.is-private #destinations:before {
+	opacity: 1;
+	height: auto;
+	content: "Mensaje privado para los siguientes usuarios:";
+}
+
 .send2 {
 	margin-bottom: 10px;
-	min-height: 20px;
+	/* min-height: 20px; */
 	clear: both;
 }
 .send2:after {
