oculto la sección de navegación y búsqueda cuando se despliega el detalle de un tema

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -253,6 +253,9 @@ ul.navigator li:hover {
     margin-top: 10px;
     margin-right: 5px;
 }
+#messages-header.on .nav {
+    display: none;
+}
 #messages-header .button {
     border: 0;
     color: #fff;
