--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -90,7 +90,8 @@ a:hover {
     z-index: 300;
 }
 #profile-container.on {
-    height: 560px;
+    height: 600px;
+    top: 0;
 }
 /* Navegación */
 .section-container {
@@ -149,19 +150,21 @@ ul.navigator li:hover {
     background-color: #1e5070;
     padding: 6px;
     width: 140px;
+    height: 32px;
 }
 #profile-item:before {
     transition: -webkit-transform .25s ease;
     position: absolute;
     font-size: 10px;
     left: 5px;
-    top: 40px;
+    top: 30px;
     background: #1e5070;
     width: 10px;
-    height: 9px;
+    height: 10px;
     text-align: center;
-    padding: 2px;
+    padding: 5px;
     z-index: 320;
+    border-radius: 50px;
 }
 #profile-item.on:before{
     -webkit-transform: rotate(180deg);
@@ -192,7 +195,7 @@ ul.navigator li:hover {
     border-bottom: 2px solid #fff;
 }
 #user-avatar {
-    width: 30px;
+    width: 20px;
     border: 1px solid #fff;
     float:  left;
     margin-right: 3px;
@@ -345,12 +348,16 @@ form.search .button {
     transition: -webkit-transform .25s ease;
     position: absolute;
     font-size: 10px;
-    left: 5px;
-    top: 40px;
+    left: 3px;
+    top: 30px;
     background-color: rgba(255, 51, 0, 0.85);
     text-align: center;
     padding: 2px;
     z-index: 500;
+    width: 10px;
+    height:  10px;
+    padding: 5px;
+    border-radius: 50px;
 }
 #board-description {
     clear: both;
@@ -507,7 +514,6 @@ form.search .button {
 /* Control del tema */
 .theme-control {
     float: right;
-    /* margin-top: 15px; */
 }
 .control-item {
     background-color: #1e5070;
@@ -670,7 +676,7 @@ form.search .button {
 #profile-section {
     overflow: auto;
     padding: 20px;
-    margin: 15px;
+    margin: 50px 10px;
     height: 490px;
     position: relative;
     background-color: #fff;
@@ -862,7 +868,6 @@ span.time-tooltip span:first-child {
     background-color: #eee;
     padding: 5px;
     margin-top: 10px;
-    /* max-height: 300px; */
 }
 .modal .fav-2-delete .message {
     max-height: 300px;
@@ -1015,6 +1020,7 @@ span.time-tooltip span:first-child {
 .selector .puser-nickname {
     font-weight: bold;
     cursor: pointer;
+    margin-bottom: 5px;
 }
 .selector .puser-nickname:hover {
     color: #f30;
@@ -1040,7 +1046,7 @@ span.time-tooltip span:first-child {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
-    width: 330px;
+    width: 310px;
     color: #666;
 }
 .selector .theme-control {
