se añade un enlace en la extensión a la página de opciones

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -681,15 +681,18 @@ form.search .button {
     position: relative;
     background-color: #fff;
 }
-#logout {
+#profile-toolbar {
+    padding: 20px;
     position: absolute;
     right: 0;
     top: 0;
-    padding: 5px;
-    font-size: 18px;
+}
+#profile-toolbar .button {
+    
+    font-size: 20px;
     cursor: pointer;
 }
-#logout:hover {
+#profile-toolbar .button:hover {
     color: #f30;
 }
 #profile-section .info {
