--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -421,6 +421,8 @@ form.search .button {
     /* overflow-y: auto; */
     margin: 0;
     margin-bottom: 10px;
+    max-height: 60px;
+    overflow-y: auto;
 }
 #board-description .user-information p {
     height: 45px;
@@ -537,7 +539,7 @@ form.search .button {
 
 /* Control del tema */
 .theme-control {
-    float: right;
+    /* float: right; */
 }
 .control-item {
     background-color: #1e5070;
