primera versión completa del tutorial de la extensión

--- a/src/lib/tourist/my-popover.css
+++ b/src/lib/tourist/my-popover.css
@@ -121,3 +121,11 @@
   border-right-width: 0;
   border-left-color: #fff;
 }
+
+.popover .tour-next {
+    background-color: #f30;
+
+    border: none;
+    color: #fff;
+    height: 30px;
+}
