--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -715,11 +715,19 @@ form.search .button {
 }
 #profile-toolbar .button {
     
-    font-size: 20px;
+    font-size: 18px;
     cursor: pointer;
+    margin-left: 10px;
+    width: 18px;
+    height: 18px;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    padding: 5px;
+    border-radius: 30px;
 }
 #profile-toolbar .button:hover {
-    color: #f30;
+    background-color: #333;
 }
 #profile-section .info {
     height: 65px;
