--- a/src/lib/tourist/tourist.css
+++ b/src/lib/tourist/tourist.css
@@ -1,10 +1,11 @@
 .tour-highlight{
-  background: transparent;
+  /*background: transparent;
   -moz-box-shadow: 0px 0px 7px 0px rgba(0, 241, 255, 0.701961);
   -webkit-box-shadow: 0px 0px 7px 0px rgba(0, 241, 255, 0.701961);
   -o-box-shadow: 0px 0px 7px 0px rgba(0, 241, 255, 0.701961);
   box-shadow: 0px 0px 7px 0px rgba(0, 241, 255, 0.701961);
-  border-radius: 2px;
+  border-radius: 2px;*/
+  background-color: #9FD773;
 }
 
 /* bootstrap styles */
@@ -16,7 +17,8 @@
   min-width: 200px;
 }
 .tourist-popover .popover-content p{
-  margin: 0 8px 10px 8px;
+  margin: 0 15px 10px 5px;
+  font-size: 12px;
 }
 .tourist-popover .popover-content .action-label{
   background: rgba(0, 111, 255, 0.168627);
@@ -47,6 +49,7 @@
 }
 .tourist-popover .btn-close:hover{
   opacity: .5;
+  color: #000;
 }
 
 /* qtip2 styles */
