--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -115,11 +115,19 @@ body {
 /* Elementos HTML */
 /******************/
 
+#switch {
+  background-color: #f30;
+  color: #fff;
+  padding: 2px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
 #switch.AND:before {
-  content: "TODOS";
+  content: "todos";
 }
 #switch.OR:before {
-  content: "ALGUNO";
+  content: "alguno de";
 }
 
 #chart-messages {
@@ -471,6 +479,14 @@ body {
   margin-right: 5px;
   float: left;
   margin-top: 5px;
+  cursor: pointer;
+}
+
+.images-list img:hover {
+  outline: 1px solid #f30;
+}
+.images-list img.on {
+  outline: 2px solid #f30; 
 }
 
 #chart-filter {
