estilo de la vista de conversación entre dos usuarios

--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -627,5 +627,6 @@ body {
 
 /* Detalle de mensajes de interaccion entre usuarios */
 .interaction-msgs {
-  
+  height: 400px;
+  overflow-y: auto;
 }
