--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -233,13 +233,23 @@ body {
 }
 .interaction-tooltip h2 {
   font-size: 10px;
-  font-weight: normal;
+  font-weight: bold;
   margin: 3px 0;
+  margin-top: 5px;
+  border-top: 1px solid #ddd;
 }
 .interaction-tooltip ul {
-  padding: 0 10px;
+  padding: 0;
   margin: 0;
   list-style: none;
+}
+.interaction-tooltip li {
+  display: inline-block;
+  margin-right: 5px;
+  border: 1px solid #ddd;
+  padding: 1px;
+  border-radius: 3px;
+  background-color: #eee;
 }
 
 #chart-control {
