--- a/src/exe/eskup-reminder.css
+++ b/src/exe/eskup-reminder.css
@@ -4,36 +4,46 @@
 .eskup-reminder {
     background-color: #f30;
     color: #fff;
-    width: 150px;
+    width: 200px;
     position: fixed;
     top: 20px;
     right: 20px;
     border-radius: 5px;
-    font-size: 12px;
+    font-size: 14px;
     padding: 10px;
     font-family: 'PT Sans', sans-serif;
     z-index: 2000;
+    border: 3px solid #fff;
 }
 .eskup-reminder:before {
 	position: absolute;
 	display: block;
 	background-color: #f30;
 	content: "";
-	left: 120px;
-	top: -5px;
+	left: 25px;
+	top: -7px;
 	width: 10px;
 	height: 10px;
+	border-top: 2px solid #fff;
+	border-left: 2px solid #fff;
 	-webkit-transform: rotate(45deg);
 }
-
+.eskup-reminder p {
+	margin-left: 32px;
+}
 .eskup-reminder-buttons div {
 	background-color: #000;
 	cursor: pointer;
-	font-size: 10px;
+	font-size: 12px;
 	margin-top: 5px;
 	padding: 3px;
 	text-align: center;
 }
 .eskup-reminder-buttons div:hover {
 	background-color: #666;
+}
+.eskup-reminder i {
+	display: block;
+	font-size: 30px;
+	float: left;
 }
