entre otras mejoras, correcto límite de caracteres en mensajes comentario, y nuevo mensaje es comentario cuando se abre desde un hilo

--- a/src/css/dialog.css
+++ b/src/css/dialog.css
@@ -71,6 +71,8 @@
 /* Lista de enlaces para inserción */
 .links-list {
 	padding-right: 10px;
+	max-height: 300px;
+	overflow-y: auto;
 }
 .links-list ul {
 	padding: 0;
