--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -69,14 +69,27 @@
 	bottom: 0;
 	display: none;
 	cursor: pointer;
-	background-color: #000;
-	padding: 5px;
+	background-color: #ddd;
+	padding: 4px;
+	width: 20px;
+	height: 20px;
+	border-radius: 3px;
+	text-align: center;
+	color: #666;
+}
+#removeimage:hover {
+	background-color: #ccc;
+}
+#removeimage:active {
+	background-color: #666;
+	color: #fff;
 }
 
 #removeimage:before {
-	color: #fff;
-	font-size: 25px;
+	
+	font-size: 20px;
 	cursor: pointer;
+	display: inline;
 }
 
 #newimage:hover #removeimage {
