--- a/src/css/image-editor.css
+++ b/src/css/image-editor.css
@@ -181,6 +181,7 @@ input[type=color] {
 	width: 30px;
 	height: 25px;
 	cursor: pointer;
+	outline: none;
 }
 
 form.expandable {
@@ -379,35 +380,33 @@ form.expandable input[type=submit] {
 /* Fin opciones de textp */
 
 /* Opciones de filtrado */
+#filters:before {
+	display: block;
+	content: "Filtros de imagen";
+	border-bottom: 1px dotted #666;
+	margin-bottom: 3px;
+	margin-top: 10px;
+}
 #filters_custom label {
 	display: inline-block;
 	width: 65px;
 }
-#filters_custom input[type=text] {
-	display: none;
-}
+
 #filters_custom input[type=range] {
-	width: 200px;
+	
 }
 #filters_custom {
-	width: 300px;
-	border-radius: 5px;
-	border: 1px solid #fff;
-	padding: 5px;
+	width: 220px;
 	float: left;
 }
 #filters_preset {
-	width: 200px;
-	float: right;
-}
-#filters_preset {
-	border: 1px solid #fff;
-	border-radius: 5px;
-	padding: 5px;
+	
 }
 #filters_preset input[type=button] {
-	width: 70px;
+	width: 60px;
 	height: 50px;
+	margin-bottom: 3px;
+	font-size: 10px;
 }
 
 /* Guardado y recuperación de dibujos */
